-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Integration
-
Fully Compatible
-
ALL
-
v9.0
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
We originally thought this was a bug with the Extensions API or the mongot extension, but it turned out to be an issue with IFR flags being correctly initialized on a shard after being sent over-the-wire from a router.
Original Description
For queries on views over sharded collections, mongos serializes the resolved view into the $vectorSearch stage spec sent to shards (see document_source_vector_search.cpp; the legacy stage tolerates and strips it). The mongot-extension $vectorSearch parser rejects the spec with Location65127: Cannot specify the reserved field 'view' in a $vectorSearch stage. Still present in extension v2.0.2 and v2.0.3.
This fails the sharded with_mongot_extension_* tasks on the mongot-integration-extensions-secure variants (red since their introduction in SERVER-130631): all of jstests/with_mongot/e2e/views/vector_search/ plus sharding_no_passthrough/sharded_view_kickback.js. single_node passes, consistent with the mongos-serialization path.
Fix is extension-side (accept or strip the internally-serialized view field). The tests are excluded from the with_mongot_extension suites pending this fix (SERVER-131182).
- is duplicated by
-
SERVER-131206 IFR kickback for extension $vectorSearch in $unionWith exhausts retries instead of falling back to legacy stage
-
- Closed
-
-
SERVER-131149 Complete TODO listed in SERVER-130918
-
- Closed
-
-
SERVER-131154 scoreFusion + extension vector search crashes due to metadata dependency failures
-
- Closed
-
- is related to
-
SERVER-130631 Run with_mongot_extension suites in extensions signature secure mode
-
- Closed
-
-
SERVER-131182 Update mongot-extension and rerank-extension to v2.0.3
-
- Closed
-
- related to
-
SERVER-131681 Move opCtx-coupled IncrementalFeatureRolloutContext code out of server_base to fix UBSan link failure
-
- Closed
-
-
SERVER-131001 Reenable hybrid search tests w/ extension vectorSearch when the extension correctly reports metadata it generates
-
- Closed
-