SERVER-131199: Prefer wire IFR flags over a lazily-materialized default context (#58421)

Co-authored-by: Finley Lau <finley.lau@mongodb.com>
GitOrigin-RevId: 2a98177057ff5c037e42fb6e6ce95c6ec29fa15c