src/mongo/db/feature_flag.cpp
@@ -419,9 +419,18 @@ void IncrementalRolloutFeatureFlag::registerFlag(IncrementalRolloutFeatureFlag* 
 // static
 std::shared_ptr<IncrementalFeatureRolloutContext> IncrementalFeatureRolloutContext::get(
     OperationContext* opCtx) {
+    auto& deferred = getIfrContextOnOpCtx(opCtx).deferred;
+    // A nested DBDirectClient op (e.g. view resolution, or the auth user-cache lookup) can run on
+    // the parent's opCtx before the parent installs its wire IFR context. The context installs
+    // once, so materializing it here with local defaults would make the parent's wire install a
+    // no-op and silently drop a value the router set -- e.g. a flag it disabled after a kickback.
+    // Hand nested ops a detached context instead; once the parent installs, nested ops inherit it.
+    if (!deferred.isInitialized() && opCtx->getClient()->isInDirectClient()) {
+        return std::make_shared<IncrementalFeatureRolloutContext>();
+    }
     // Forces materialization of whatever initializer is present (the default empty context, or one
     // an install path assigned).
-    return *getIfrContextOnOpCtx(opCtx).deferred;
+    return *deferred;
 }
 
 // static
